--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="templates/css/style.css">
+    <link rel="stylesheet" href="templates/css/style_index.css">
+    <title>Forum</title>
+
 </head>
 <body>
+
+    <div class="header" oneclick="window.location.href='index.html'">
+        <h2>Forum</h2>
+        <div class="header_right">
+            <a href="login.html">Login</a>
+            <a href="register.html">Register</a>
+        </div>
+    </div>
+
+    <div class="content">
+        <div class="content_top">
+        </div>
+        <div class="content_bot">
+            
+        </div>
 
 </body>
 </html>
