--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="templates/css/style.css">
     <link rel="stylesheet" href="templates/css/style_index.css">
+    <link rel="stylesheet" href="templates/css/style_scrollbar.css">
     <title>Forum</title>
 
 </head>
@@ -14,6 +15,9 @@
 
     <div class="header" oneclick="window.location.href='index.html'">
         <h2>Forum</h2>
+        <div class="header_middle">
+            <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
+        </div>
         <div class="header_right">
             <a href="login.html">Login</a>
             <a href="register.html">Register</a>
