--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -8,22 +8,90 @@ body {
 }
 
 .header {
-    background-color: #36393dca ;
-    //backdrop-filter: blur(10px);    
+    background-color: rgba(54, 57, 61, 0.7921568627);
     color: var(--whi);
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: flex-start;
     height: 8vh;
     width: 100vw;
-    //border-bottom: 2px solid var(--oran);
-    box-shadow: 0px -5px 20px 0px #000000fa;
+    box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 0.33);
+    justify-content: space-around;
+    align-content: space-between;
+    flex-wrap: wrap;
+    position: relative;
+    
+        h2 {
+            margin: 40px;
+        }
 
         .header_right {
+            padding: 30px;
+            position: relative;
             display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            align-items: center;         
+
+            a {
+                margin: 15px;
+
+                &:hover {
+                    color: #FE5626;
+                    padding: 5px;
+                    box-shadow: 0 0 0.2px 0 #000000;
+                    transition: 0.2s;
+                    font-size: 18px;
+                }
+
+            }
+
         }
+        .header_middle {
+            position: fixed;
+            
+            .search {
+                border: 1px solid rgba(73, 78, 81, 0.616);
+                border-radius: 5px;
+                background-color: #bfbebd1d;
+                color: var(--silv);
+                padding: 5px;
+                width: 250px;
+                height: 30px;
+                box-shadow: inset 0 0 2px 0px rgba(0, 0, 0, 0.144);
+                transition: 0.2s;
+
+                &:hover {
+                    box-shadow: 0 0 0.2px 0 #000000;
+                    background-color: var(--silv);
+
+                    &::placeholder {
+                        color: var(--gre);
+                    }
+                }
+                
+                &:focus {
+                    box-shadow: 0 0 0.2px 0 #000000;
+                    background-color: var(--silv);
+                    color: var(--ony);
+                    padding: 7px;
+                    outline: none;
+
+                    &::placeholder {
+                        color: var(--gre);
+                        overflow: hidden;
+                    }
+                }
+
+                &::placeholder {
+                    color: var(--silv);
+                    padding: 10px;
+                }
+
+            }
+
+        }
+
     }
 
 .content {
