--- a/templates/html/signup.html
+++ b/templates/html/signup.html
@@ -23,7 +23,7 @@
             <input name="username" type="username" class="textInputBox" placeholder="Username">
             <input name="email" type="email" class="textInputBox" placeholder="Email">
             <input name="password" type="password" class="textInputBox" placeholder="Password">
-            <input name="confirmpassword" type="confirmpassword" class="textInputBox" placeholder="Confirm Password">
+            <input name="confirmpassword" type="password" class="textInputBox" placeholder="Confirm Password">
         </div>
         <button type="submit">Sign up</button>
         <p class="inscription"> Already member ? <a href="/login"> <span>Log In</span> </a>. </p>
