--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -26,22 +26,31 @@ body {
         }
 
         .header_right {
-            padding: 30px;
-            position: relative;
+            padding-right: 30px;
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
-            align-items: center;         
+            align-items: center;
 
             a {
-                margin: 15px;
+                background-color: #fe5526e6;
+                color: #ececec;
+                border-radius: 12px;
+                height: 5vh;
+                width: 14vh;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                margin: 20px;
+                box-shadow: 0px 1px 8px 0px #00000037;
 
                 &:hover {
-                    color: #FE5626;
-                    padding: 5px;
-                    box-shadow: 0 0 0.2px 0 #000000;
+                    color: #ffffff;
+                    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.334);
                     transition: 0.2s;
-                    font-size: 18px;
+                    font-size: 17px;
+                    background-color: #fe5526;
                 }
 
             }
