update front login/register

--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -19,8 +19,7 @@
             <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
         </div>
         <div class="header_right">
-            <a href="login.html">Login</a>
-            <a href="register.html">Register</a>
+            <a href="/login">Connexion</a>
         </div>
     </div>
 
