--- a/templates/html/signup.html
+++ b/templates/html/signup.html
@@ -6,18 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="templates/css/signup.css">
+    <link rel="stylesheet" href="templates/css/style_scrollbar.css">
+    <link rel="stylesheet" href="templates/css/style.css">
+    <link rel="stylesheet" href="templates/css/style_index.css">
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum</title>
 </head>
 
 <body>
+  <div class="header" oneclick="window.location.href='index.html'">
+    <h2>Forum</h2>
+    <div class="header_middle">
+        <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
+    </div>
+    <div class="header_right">
+        <a href="/signup">Sign up</a>
+        <a href="/login">Login</a>
+    </div>
+</div>
+
   <div class="container">
     <div class="leftbox">
       <img src="/server/images/icons/gplogo.png" alt="">
-      <h1>Forum</h1>
+
     </div>
-      
+  </div>
+
     <form method="post">
       
       <h1>Sign up</h1>  
