front Login/ remis en place du html login/signup

--- a/templates/html/signup.html
+++ b/templates/html/signup.html
@@ -19,15 +19,11 @@
         <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
     </div>
     <div class="header_right">
-        <a href="/signup">Sign up</a>
-        <a href="/login">Login</a>
+        <a href="/login">Connexion</a>
     </div>
 </div>
 <div class="container">
     <div class="leftbox">
-        <img src="/server/images/icons/gplogo.png" alt="">
-        <h1>Forum</h1>
-    </div>
     <form action="/signup" method="post">
         <h1>Sign up</h1>
         <div class="inputs">
@@ -41,7 +37,7 @@
         <button type="submit">Sign up</button>
         <p class="inscription"> Already member ? <a href="/login"> <span>Log In</span> </a>. </p>
     </form>
-</div>
+    </div>
 <div class="back">
     <a href="/"><i class="bx bx-arrow-back"></i></a>
 </div>
