--- a/templates/html/login.html
+++ b/templates/html/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="templates/css/login.css">
+    <link rel="stylesheet" href="templates/css/style_login.css">
     <link rel="stylesheet" href="templates/css/style_scrollbar.css">
     <link rel="stylesheet" href="templates/css/style.css">
     <link rel="stylesheet" href="templates/css/style_index.css">
@@ -21,28 +21,26 @@
             <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
         </div>
         <div class="header_right">
-            <a href="/signup">Sign up</a>
-            <a href="/login">Login</a>
+            <a href="/login">Connexion</a>
         </div>
     </div>
-
   <div class="container">
     <div class="leftbox">
+      <form method="post">  
+        <h1>Login</h1>
+          <div class="inputs">
+            <input name="username" type="username" class="textInputBox" placeholder="Username" >
+            <input name="password" type="password" class="textInputBox" placeholder="Password">
+          </div>
+        <button type="submit">Login</button>
+      </form>
     </div>
-
-
-    <form method="post">
-        
-      <h1>Login</h1>
-
-      <div class="inputs">
-          <input name="username" type="username" class="textInputBox" placeholder="Username" >
-          <input name="password" type="password" class="textInputBox" placeholder="Password">
-      </div>
-      <button type="submit">Login</button>
-      <p class="inscription"> Don't have account ? <a href="/signup"> <span>Create it</span> </a>. </p>
-
-    </form>
+    <div class="rightbox">
+      <form action="/signup" method="post">
+          <h1>You don’t have an account?</h1>
+          <h2>It is fast, free, and will allow you to reserve your nickname on the forums, so that no one else than you can use it...</h2>
+          <button type="submit">Create an account</button>
+    </div>
   </div>
   <div class="back">
     <a href="/"><i class="bx bx-arrow-back"></i></a>
