--- a/templates/css/style_login.css
+++ b/templates/css/style_login.css
@@ -4,23 +4,27 @@ body {
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: center;
 }
 body .container {
+  margin-top: 10vh;
   display: flex;
-  background-color: #0D1321;
-  width: 50%;
+  background-color: #36393d;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
   height: 100%;
 }
 body .container .leftbox {
+  background-color: blue;
   display: flex;
   flex-direction: row;
   cursor: pointer;
-  background-color: gray;
 }
 body .container .leftbox form {
-  margin: 4.7vw;
   background-color: red;
+  margin: 4.7vw;
   opacity: 0.98;
   padding: 18px 45px;
   border-radius: 20px;
@@ -29,9 +33,9 @@ body .container .leftbox form {
   max-height: 28pc;
   display: flex;
   flex-direction: column;
+  border-right: 1px solid #000000;
 }
 body .container .leftbox h1 {
-  text-align: center;
   padding: 15px;
 }
 body .container .leftbox .inputs {
@@ -44,7 +48,7 @@ body .container .leftbox .inputs input[type=password] {
   padding: 15px;
   border: none;
   border-radius: 5px;
-  background-color: rgba(13, 19, 33, 0.2509803922);
+  background-color: gray;
   outline: none;
   margin-bottom: 1.4vw;
   opacity: 0.5;
@@ -72,20 +76,20 @@ body .container .leftbox button {
   border: none;
   font-size: 15px;
   color: rgba(255, 255, 255, 0.7647058824);
-  background-color: #28B67E;
+  background-color: green;
   outline: none;
   cursor: pointer;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 body .container .rightbox {
+  background-color: brown;
   display: flex;
   flex-direction: row;
   cursor: pointer;
-  background-color: brown;
 }
 body .container .rightbox form {
-  margin: 4.7vw;
-  background-color: #0D1321;
+  background-color: red;
+  margin: 8vw;
   opacity: 0.98;
   padding: 18px 45px;
   border-radius: 20px;
@@ -101,25 +105,19 @@ body .container .rightbox .inscription {
   color: #878787;
   padding: 5px;
 }
-body .container .rightbox button {
-  padding: 13px 30px;
+body .container .rightbox input.btn {
+  margin-left: 0;
+  margin-top: 1.4vw;
+  float: left;
+  padding: 7px 15px;
   border-radius: 5px;
-  margin: 1vw;
   border: none;
   font-size: 15px;
   color: rgba(255, 255, 255, 0.7647058824);
-  background-color: #28B67E;
+  background-color: green;
   outline: none;
   cursor: pointer;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-}
-body .container .back {
-  cursor: pointer;
-  height: 60px;
-  width: 60px;
-  border-radius: 100px;
-  margin: 80px -9px;
-  position: initial;
 }
 
 /*# sourceMappingURL=style_login.css.map */
