--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="header" oneclick="window.location.href='index.html'">
-        <h2>Forum</h2>
+        <h2><a href="/">Forum</a></h2>
         <div class="header_middle">
             <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
         </div>
