--- a/templates/html/signup.html
+++ b/templates/html/signup.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="header" oneclick="window.location.href='index.html'">
-    <h2>Forum</h2>
+    <h2><a href="/">Forum</a></h2>
     <div class="header_middle">
         <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
     </div>
@@ -38,8 +38,6 @@
         <p class="inscription"> Already member ? <a href="/login"> <span>Log In</span> </a>. </p>
     </form>
     </div>
-<div class="back">
-    <a href="/"><i class="bx bx-arrow-back"></i></a>
-</div>
+
 </body>
 </html>
