--- a/templates/html/login.html
+++ b/templates/html/login.html
@@ -26,7 +26,7 @@
     </div>
   <div class="container">
     <div class="leftbox">
-      <form method="post">  
+      <form action="/logining" method="post">
         <h1>Login</h1>
           <div class="inputs">
             <input name="username" type="username" class="textInputBox" placeholder="Username" >
