--- a/templates/css/style_index.css
+++ b/templates/css/style_index.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 8vh;
+  height: 9vh;
   width: 100vw;
   box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 0.33);
   justify-content: space-around;
@@ -32,21 +32,22 @@ body {
 .header .header_right a {
   background-color: rgba(254, 85, 38, 0.9019607843);
   color: #ececec;
-  border-radius: 12px;
-  height: 5vh;
-  width: 14vh;
+  border-radius: 18px;
+  height: 5.5vh;
+  width: 16vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   margin: 20px;
   box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.2156862745);
+  font-size: 14px;
 }
 .header .header_right a:hover {
   color: #ffffff;
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.334);
-  transition: 0.2s;
-  font-size: 17px;
+  transition: 0.1s;
+  font-size: 14.8px;
   background-color: #fe5526;
 }
 .header .header_middle {
@@ -58,7 +59,7 @@ body {
   background-color: rgba(191, 190, 189, 0.1137254902);
   color: var(--silv);
   padding: 5px;
-  width: 250px;
+  width: 28vw;
   height: 30px;
   box-shadow: inset 0 0 2px 0px rgba(0, 0, 0, 0.144);
   transition: 0.2s;
@@ -86,14 +87,113 @@ body {
   padding: 10px;
 }
 
-.content {
-  background-color: var(--gre);
+.navbar {
+  background-color: rgba(236, 236, 236, 0.2078431373);
   color: var(--whi);
   display: flex;
   flex-direction: row;
   padding: 10px;
-  height: 8vh;
+  height: 3.5vh;
   width: 100vw;
+  text-align: center;
+}
+.navbar .catbar {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.navbar .catbar .cat {
+  margin: auto;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  padding: 0 50px 0 50px;
+  font-size: 15px;
+  position: relative;
+  color: var(--whi);
+}
+.navbar .catbar .cat a:hover {
+  border-bottom: 2.3px solid rgba(254, 85, 38, 0.8588235294);
+  line-height: 3.2vh;
+}
+
+.content .content_top {
+  background-color: rgba(54, 57, 61, 0.5529411765);
+  box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.3215686275);
+  color: var(--whi);
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin: 20px auto auto auto;
+  height: 15vh;
+  width: 90vw;
+}
+.content .content_top .new_discution {
+  height: 5vh;
+  width: 21vh;
+  border: 2px solid rgba(254, 85, 38, 0.8117647059);
+  border-radius: 25px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto 60px auto auto;
+  z-index: 1;
+}
+.content .content_top .new_discution:hover {
+  border: 2px solid #fe5526;
+  transition: 0.2s;
+}
+.content .content_top .new_discution a {
+  color: rgba(254, 85, 38, 0.8117647059);
+  font-size: 15px;
+  font-weight: 600;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.2s;
+}
+.content .content_top .new_discution a:hover {
+  color: #fe5526;
+  transition: 0.2s;
+}
+.content .content_top .new_discution i {
+  color: rgba(254, 85, 38, 0.8117647059);
+  margin-right: 10px;
+  font-size: 18px;
+  z-index: 0;
+}
+.content .content_top .new_discution i:hover {
+  color: #fe5526;
+  transition: 0.2s;
+}
+.content .content_bot .cb_right {
+  background-color: rgba(54, 57, 61, 0.5529411765);
+  box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.3215686275);
+  color: var(--whi);
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin: 25px 54px auto auto;
+  height: 40vw;
+  width: 65vw;
+  position: relative;
+}
+.content .content_bot .cb_left {
+  background-color: rgba(54, 57, 61, 0.5529411765);
+  box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.3215686275);
+  color: var(--whi);
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin: auto auto auto 54px;
+  padding: auto;
+  height: 40vw;
+  width: 22vw;
+  position: absolute;
 }
 
 /*# sourceMappingURL=style_index.css.map */
