--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="templates/css/style.css">
     <link rel="stylesheet" href="templates/css/style_index.css">
     <link rel="stylesheet" href="templates/css/style_scrollbar.css">
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
     <title>Forum</title>
-
 </head>
 <body>
-
     <div class="header" oneclick="window.location.href='index.html'">
         <h2>Forum</h2>
         <div class="header_middle">
             <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
         </div>
         <div class="header_right">
-            <a href="login.html">Connection</a>
+            <a href="login.html"><strong>CONNECTION</strong></a>
         </div>
     </div>
-
+    
+    <div class="navbar">
+        <div class="catbar">
+            <div class="cat"><a href="index.html">Category 1</a></div>
+            <div class="cat"><a href="index.html">Category 2</a></div>
+            <div class="cat"><a href="index.html">Category 3</a></div>
+        </div>
+    </div>
     <div class="content">
         <div class="content_top">
+            <div class="new_discution" ><a href="index.html"><i class='bx bxs-conversation'></i>New discution</a></div>
         </div>
         <div class="content_bot">
-            
+            <div class="cb_left"></div>
+            <div class="cb_right"></div>
         </div>
-
+    </div>
 </body>
 </html>
