--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -13,7 +13,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 8vh;
+    height: 9vh;
     width: 100vw;
     box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 0.33);
     justify-content: space-around;
@@ -35,21 +35,22 @@ body {
             a {
                 background-color: #fe5526e6;
                 color: #ececec;
-                border-radius: 12px;
-                height: 5vh;
-                width: 14vh;
+                border-radius: 18px;
+                height: 5.5vh;
+                width: 16vh;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 justify-content: center;
                 margin: 20px;
                 box-shadow: 0px 1px 8px 0px #00000037;
+                font-size: 14px;
 
                 &:hover {
                     color: #ffffff;
                     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.334);
-                    transition: 0.2s;
-                    font-size: 17px;
+                    transition: 0.1s;
+                    font-size: 14.8px;
                     background-color: #fe5526;
                 }
 
@@ -65,7 +66,7 @@ body {
                 background-color: #bfbebd1d;
                 color: var(--silv);
                 padding: 5px;
-                width: 250px;
+                width: 28vw;
                 height: 30px;
                 box-shadow: inset 0 0 2px 0px rgba(0, 0, 0, 0.144);
                 transition: 0.2s;
@@ -103,12 +104,136 @@ body {
 
     }
 
-.content {
-    background-color: var(--gre);
+
+
+.navbar {
+    background-color: #ececec35;
     color: var(--whi);
     display: flex;
     flex-direction: row;
     padding: 10px;
-    height: 8vh;
+    height: 3.5vh;
     width: 100vw;
+    text-align: center;
+
+    .catbar {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        .cat {
+            margin: auto;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            padding: 0 50px 0 50px;
+            font-size: 15px;
+            position: relative;
+            color: var(--whi);
+
+            a {
+                &:hover {
+                    border-bottom: 2.3px solid #fe5526db;
+                    line-height: 3.2vh;
+                }
+
+            }
+
+        }
+
+    }
+
+}
+    
+.content {
+
+    .content_top {
+        background-color: #36393d8d;
+        box-shadow: 3px 5px 20px 0px #00000052;
+        color: var(--whi);
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        margin: 20px auto auto auto;
+        height: 15vh;
+        width: 90vw;
+
+        .new_discution {
+            height: 5vh;
+            width: 21vh;
+            border: 2px solid #fe5526cf;
+            border-radius: 25px;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: auto 60px auto auto;
+            z-index: 1;
+
+            &:hover {
+                border: 2px solid #fe5526;
+                transition: 0.2s;
+            }
+            
+            a {
+                color: #fe5526cf;
+                font-size: 15px;
+                font-weight: 600;
+                text-decoration: none;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: 0.2s;
+
+                &:hover {
+                    color: #fe5526;
+                    transition: 0.2s;
+                }
+            }
+
+            i {
+                color: #fe5526cf;
+                margin-right: 10px;
+                font-size: 18px;
+                z-index: 0;
+
+                &:hover {
+                    color: #fe5526;
+                    transition: 0.2s;
+                }
+            }
+        }
+    }
+
+    .content_bot {
+        
+        .cb_right {
+            background-color: #36393d8d;
+            box-shadow: 3px 5px 20px 0px #00000052;
+            color: var(--whi);
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            margin: 25px 54px auto auto;
+            height: 40vw;
+            width: 65vw;
+            position: relative;
+        }
+
+        .cb_left {
+            background-color: #36393d8d;
+            box-shadow: 3px 5px 20px 0px #00000052;
+            color: var(--whi);
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            margin: auto auto auto 54px;
+            padding: auto;
+            height: 40vw;
+            width: 22vw;
+            position: absolute;
+        }
+    }
 }
