--- a/templates/css/style_index.css
+++ b/templates/css/style_index.css
@@ -24,6 +24,11 @@ body {
 }
 .header h2 {
   margin: 40px;
+  font-size: 30px;
+}
+.header h2 :hover {
+  color: #ffffff;
+  transition: 0.2s;
 }
 .header .header_right {
   padding-right: 30px;
@@ -106,7 +111,7 @@ body {
 }
 .header .header_middle .search:hover {
   box-shadow: 0 0 0.2px 0 #000000;
-  background-color: var(--silv);
+  background-color: rgba(236, 236, 236, 0.4196078431);
 }
 .header .header_middle .search:hover::placeholder {
   color: var(--gre);
@@ -169,9 +174,21 @@ body {
   display: flex;
   align-items: center;
   flex-direction: row;
-  margin: 20px 60px auto 60px;
+  margin: 20px auto;
   height: 15vh;
   width: 90vw;
+}
+.content .content_top .not_connected {
+  margin: 0 0 0 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.content .content_top .not_connected h1 {
+  font-size: 30px;
+  font-weight: 600;
+  margin: 0;
 }
 .content .content_top .hi {
   margin: 0 0 0 60px;
