--- a/templates/html/login.html
+++ b/templates/html/login.html
@@ -10,20 +10,21 @@
     <link rel="stylesheet" href="templates/css/style.css">
     <link rel="stylesheet" href="templates/css/style_index.css">
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum</title>
 </head>
 
 <body>
-    <div class="header" oneclick="window.location.href='index.html'">
-        <h2><a href="/">Forum</a></h2>
-        <div class="header_middle">
-            <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
-        </div>
-        <div class="header_right">
+  <div class="header" oneclick="window.location.href='index.html'">
+    <h2><a href="/">Forum</a></h2>
+    <div class="header_middle">
+        <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
+    </div>
+    <div class="header_right">
+        <div class="login">
             <a href="/login">Connexion</a>
         </div>
     </div>
+</div>
   <div class="container">
     <div class="leftbox">
       <form action="/logining" method="post">
