--- a/templates/css/style_login.css
+++ b/templates/css/style_login.css
@@ -6,20 +6,19 @@ body {
   align-items: center;
 }
 body .container {
+  background-color: rgba(54, 57, 61, 0.5529411765);
   margin-top: 15vh;
   display: flex;
-  justify-content: center;
   flex-direction: row;
-  flex-wrap: wrap;
   align-items: center;
   height: 100%;
+  justify-content: center;
+  flex-wrap: nowrap;
 }
 body .container .leftbox {
   display: flex;
-  flex-direction: row;
 }
 body .container .leftbox form {
-  background-color: rgba(54, 57, 61, 0.5529411765);
   margin: 4.7vw;
   opacity: 0.98;
   padding: 18px 45px;
@@ -67,7 +66,6 @@ body .container .leftbox .inputs input[type=password]:focus {
   box-shadow: 0 0 0.2px 0 #000000;
   background-color: var(--silv);
   color: var(--ony);
-  padding: 7px;
   outline: none;
 }
 body .container .leftbox .inputs input[type=username]:focus::placeholder,
@@ -76,52 +74,47 @@ body .container .leftbox .inputs input[type=password]:focus::placeholder {
   overflow: hidden;
 }
 body .container .leftbox button {
-  padding: 13px 30px;
+  height: 6vh;
+  width: 18vh;
   border-radius: 5px;
-  margin: 1vw;
+  margin: 15px auto;
   border: none;
   font-size: 15px;
   color: rgba(255, 255, 255, 0.7647058824);
-  background-color: green;
+  background-color: rgba(37, 175, 2, 0.855);
   outline: none;
   cursor: pointer;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  justify-content: center;
 }
 body .container .rightbox {
-  display: flex;
-  flex-direction: row;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
 body .container .rightbox form {
-  background-color: rgba(54, 57, 61, 0.5529411765);
   margin: 8vw;
   opacity: 0.98;
   padding: 18px 45px;
-  min-width: 300px;
-  max-width: 300px;
+  min-width: 310px;
+  max-width: 310px;
   max-height: 28pc;
   display: flex;
   flex-direction: column;
 }
-body .container .rightbox .inscription {
-  font-size: 14px;
-  margin-bottom: 20px;
-  color: #878787;
-  padding: 5px;
-}
 body .container .rightbox input.btn {
-  margin-left: 0;
-  margin-top: 1.4vw;
+  display: flex;
   float: left;
-  padding: 7px 15px;
+  height: 5vh;
+  width: 20vh;
   border-radius: 5px;
   border: none;
   font-size: 15px;
   color: rgba(255, 255, 255, 0.7647058824);
-  background-color: green;
+  background-color: var(--oran);
   outline: none;
   cursor: pointer;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  margin: 20px auto;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style_login.css.map */
