--- a/templates/scss/style_login.scss
+++ b/templates/scss/style_login.scss
@@ -7,23 +7,22 @@ body{
     align-items: center;
 
     .container{
+        background-color: #36393d8d;
         margin-top: 15vh;
         display: flex;
-        justify-content: center;
         flex-direction: row;
-        flex-wrap: wrap;
         align-items: center;
         height: 100%;
+        justify-content: center;
+        flex-wrap: nowrap;
 
 
         
-        .leftbox{
+        .leftbox{    
             display: flex;
-            flex-direction: row;
-            
+
 
             form {
-                background-color: #36393d8d;
                 margin: 4.7vw;
                 opacity: 0.98;
                 padding: 18px 45px;
@@ -55,7 +54,6 @@ body{
                     opacity: 0.5;
                     box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
 
-
                     &::placeholder {
                         color: var(--silv);
                         padding: 10px;
@@ -68,76 +66,76 @@ body{
                         &::placeholder {
                             color: var(--gre);
                         }
+
                     }
 
                     &:focus {
                         box-shadow: 0 0 0.2px 0 #000000;
                         background-color: var(--silv);
                         color: var(--ony);
-                        padding: 7px;
                         outline: none;
     
                         &::placeholder {
                             color: var(--gre);
                             overflow: hidden;
                         }
+
                     }
+
                 }
+
             }
             
             button {
-                padding: 13px 30px;
+                height: 6vh;
+                width: 18vh;
                 border-radius: 5px;
-                margin: 1vw;
+                margin: 15px auto;
                 border:none;
                 font-size: 15px;
                 color: #ffffffc3;
-                background-color: green;
+                background-color: rgba(37, 175, 2, 0.855);
                 outline:none;
                 cursor:pointer;
                 box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+                justify-content: center;
             }
+
         }
 
         .rightbox{
-            display: flex;
-            flex-direction: row;
             border-left: 1px solid rgba(255,255,255,0.1);
 
             form {
-                background-color: #36393d8d;
                 margin: 8vw;
                 opacity: 0.98;
                 padding: 18px 45px;
-                min-width: 300px;
-                max-width: 300px;
+                min-width: 310px;
+                max-width: 310px;
                 max-height: 28pc;
                 display: flex;
                 flex-direction: column; 
             }
 
 
-            .inscription {
-                font-size: 14px;
-                margin-bottom: 20px;
-                color: #878787;
-                padding: 5px;
-            }  
 
             input.btn{
-                margin-left: 0;
-                margin-top: 1.4vw;
+                display: flex;
                 float: left;
-                padding: 7px 15px;
+                height: 5vh;
+                width: 20vh;
                 border-radius: 5px;
                 border:none;
                 font-size: 15px;
                 color: #ffffffc3;
-                background-color: green;
+                background-color: var(--oran);
                 outline:none;
                 cursor:pointer;
                 box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+                margin: 20px auto;
+                justify-content: center;
             }
+
         }
     }
 }
