--- a/templates/html/login.html
+++ b/templates/html/login.html
@@ -24,7 +24,7 @@
             <a href="/login">Connexion</a>
         </div>
     </div>
-</div>
+  </div>
   <div class="container">
     <div class="leftbox">
       <form action="/logining" method="post">
@@ -38,8 +38,10 @@
     </div>
     <div class="rightbox">
       <form action="/signup" method="post">
-          <h2> You don’t have an account ? </h2>
+        <div class="text">
+          <h2> You don't have an account ? </h2>
           <p>It is fast, free, and will allow you to reserve your nickname on the forums, so that no one else than you can use it...</p>
+        </div>
           <div class="form-group">
             <input type="submit" name="submit" value="Create an account" class="btn">
           </div>
