--- a/templates/html/login.html
+++ b/templates/html/login.html
@@ -19,7 +19,7 @@
     </div>
     <div class="header_right">
         <div class="login">
-            <a href="/login">Connexion</a>
+          <a href="/login"><strong>Connection</strong></a>
         </div>
     </div>
   </div>
