--- a/templates/html/signup.html
+++ b/templates/html/signup.html
@@ -19,7 +19,7 @@
         </div>
         <div class="header_right">
             <div class="login">
-                <a href="/login">Connexion</a>
+                <a href="/login"><strong>Connection</strong></a>
             </div>
         </div>
       </div>
@@ -34,7 +34,10 @@
             <input name="confirmpassword" type="password" class="textInputBox" placeholder="Confirm Password">
         </div>
         <button type="submit">Sign up</button>
-        <p class="inscription"> Already member ? <a href="/login"> <span>Log In</span> </a>. </p>
+        <div class="log">
+            <p class="inscription"> Already member ? <a href="/login"> <span>Log In</span> </a>
+        </div>
+        </p>
     </form>
 </body>
 </html>
