--- a/templates/css/style_signup.css
+++ b/templates/css/style_signup.css
@@ -1,21 +1,18 @@
 body {
-  display: flex;
   background-color: #0D1321;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
+  overflow: hidden;
 }
 body form {
-  margin: 1.5vw;
   background-color: #36393d;
   opacity: 0.98;
-  padding: 35px 45px;
-  min-width: 350px;
-  max-width: 300px;
-  max-height: 36pc;
+  width: 21vw;
+  height: 22vw;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  margin: 15vh auto;
+  padding: 16vh 10vh 20vh 10vh;
+  overflow: hidden;
 }
 body h1 {
   padding: 15px;
@@ -30,12 +27,12 @@ body .inputs input[type=lastname],
 body .inputs input[type=username],
 body .inputs input[type=email],
 body .inputs input[type=password] {
-  padding: 15px;
+  padding: 12px;
   border: none;
   border-radius: 5px;
   background-color: gray;
   outline: none;
-  margin-bottom: 1.4vw;
+  margin-bottom: 10px;
   opacity: 0.5;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
@@ -70,10 +67,22 @@ body button {
   border: none;
   font-size: 15px;
   color: rgba(255, 255, 255, 0.7647058824);
-  background-color: green;
+  background-color: rgba(254, 85, 38, 0.9019607843);
   outline: none;
   cursor: pointer;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+body button:hover {
+  background-color: #fe5526;
+}
+body .log {
+  margin-top: 15px;
+}
+body .log a span {
+  color: rgba(254, 85, 38, 0.9019607843);
+}
+body .log a span:hover {
+  color: #fe5526;
 }
 
 /*# sourceMappingURL=style_signup.css.map */
