--- a/templates/html/profile.html
+++ b/templates/html/profile.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="templates/css/style.css">
+    <link rel="stylesheet" href="templates/css/style_index.css">
     <link rel="stylesheet" href="templates/css/style_profile.css">
     <link rel="stylesheet" href="templates/css/style_scrollbar.css">
+    <title>Forum</title>
 </head>
 <body>
 <div class="header" oneclick="window.location.href='index.html'">
@@ -16,14 +18,16 @@
     </div>
     <div class="header_right">
         {{ if eq .Connected false }}
-            <div class="not_connected">
-                <p>Vous n'êtes pas connecté</p>
+            <div class="login">
+                <a href="/login"><strong>Connection</strong></a>
             </div>
         {{ else }}
-            <div class="hi">
-                <p>Bonjour {{ .User.FirstName }}</p>
+            <div class="logout">
+                <a href="/logout"><strong>Logout</strong></a>
             </div>
-                <img src="/templates/image/profil.jpg">
+            <div class="profil">
+                <a href="/profile"><img src="/templates/image/profil.jpg"></a>
+            </div>
         {{ end }}
     </div>
 </div>
