--- a/templates/scss/style_login.scss
+++ b/templates/scss/style_login.scss
@@ -95,11 +95,15 @@ body{
                 border:none;
                 font-size: 15px;
                 color: #ffffffc3;
-                background-color: rgba(37, 175, 2, 0.855);
+                background-color: rgba(37, 175, 2, 0.699);
                 outline:none;
                 cursor:pointer;
                 box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
                 justify-content: center;
+
+                &:hover {
+                    background-color: rgba(37, 175, 2, 0.855);
+                }
             }
 
         }
@@ -135,16 +139,22 @@ body{
                 border:none;
                 font-size: 15px;
                 color: #ffffffc3;
-                background-color: var(--oran);
+                background-color: #fe5526cf;
                 outline:none;
                 cursor:pointer;
                 box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
                 margin: 20px auto;
                 justify-content: center;
+
+                &:hover {
+                    background-color: #fe5526;
+                }
             }
 
         }
+
     }
+
 }
 
 
