--- a/templates/scss/style_signup.scss
+++ b/templates/scss/style_signup.scss
@@ -1,24 +1,18 @@
 body {
-    display: flex;
     background-color: #0D1321;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-
+    overflow: hidden;
 
     form {
-        margin: 1.5vw;
         background-color: #36393d;
-
         opacity: 0.98;
-        padding: 35px 45px;
-        min-width: 350px;
-        max-width: 300px;
-        max-height: 36pc;
+        width: 21vw;
+        height: 22vw;
         display: flex;
         flex-direction: column;
-
+        justify-content: space-evenly;
+        margin: 15vh auto;
+        padding: 16vh 10vh 20vh 10vh;
+        overflow: hidden;
     }
 
     h1 {
@@ -37,12 +31,12 @@ body {
         input[type="username"],
         input[type="email"],
         input[type="password"] {
-            padding: 15px;
+            padding: 12px;
             border: none;
             border-radius: 5px;
             background-color: gray;
             outline: none;
-            margin-bottom: 1.4vw;
+            margin-bottom: 10px;
             opacity: 0.5;
             box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 
@@ -71,9 +65,31 @@ body {
         border: none;
         font-size: 15px;
         color: #ffffffc3;
-        background-color: green;
+        background-color: #fe5526e6;
         outline: none;
         cursor: pointer;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+
+        &:hover {
+            background-color: #fe5526;
+        }
     }
+
+    .log {
+        margin-top: 15px;
+      a {
+
+        span {
+          color: #fe5526e6;
+
+          &:hover {
+            color: #fe5526;
+          }
+
+        }
+      
+      }
+
+    }
+
 }
